CSS: Fix text overflow in buttons

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,13 +32,16 @@
 }
 
 .donate-button {
-  height: 66px;
+  height: auto;
+  line-height: 1.5;
   font-size: 23px;
   font-weight: bold; 
   border-radius: 10px;
   color: #ce0000;
   background-color: black;
-  border: 1px solid white; 
+  border: 1px solid white;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 .go-button {
